[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Python manifest for the python-bridge tooling (kept out of repo root so Replit's deployer does not auto-run `uv lock` against an empty .pythonlibs stub during Cloud Run builds — see Task #558 / replit.md). Dev/CI containers install these deps via the post-merge `pip install -r requirements.txt` block in scripts/post-merge.sh."
requires-python = ">=3.11"
dependencies = [
    # Required by tools/python-bridge/tools/srtlab_unlock_catalog_gen.py
    # to introspect per-module unlock DLLs in the `unlock-catalog-check`
    # validation workflow. Mirrored in tools/python-bridge/requirements.txt
    # for the standalone Windows bridge install path.
    "pefile>=2024.8.26",
]
